--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 <input class="field" name="name" placeholder="Sobrenome" required>
 <input class="field" name="email" placeholder="Email" required>
 <input class="field" name="password" placeholder="Password" required>
-<input class="field" name="password" placeholder="Retype password" required>
+<INPUT TYPE="checkbox" NAME="termos" VALUE="termos"> Eu concordo com os termos
 <input class="field" type="submit" value="Registrar">
 
 </form>
